# graphics-learning

./: CMakeLists.txt  graphics-learning.cpp  graphics-learning.h
include/glad/: CMakeLists.txt  glad.h
include/util/: camera.h
lib/: glfw3.lib  tinyobjloader.lib
shaders/: cubeshader.frag  cubeshader.vert  lightshader.frag  lightshader.vert
src/: camera.hpp  glad.c  graphics-learning.cpp  light.hpp  primitive.cpp  primitive.hpp
util/: camera.h  shader.h
